fix header align problem, polish

--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,9 @@ body {
 }
 
 .main-container {
-    width: 100%;
-    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 ul {
@@ -25,17 +26,21 @@ a:hover {
 }
 
 .header-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column; 
+    flex-wrap: wrap;
     background-color: #1F2937;
-    padding-bottom: 100px;
-    /*padding-top: 100px; */
+    padding-bottom: 100px; 
 }
 
 .header-top {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #1F2937;
+    justify-content: center;
+    column-gap: 600px;
+    align-items: center; 
     flex-wrap: wrap;
+    padding-bottom: 100px;
 }
 
 .header-logo {
@@ -49,7 +54,6 @@ a:hover {
 }
 
 .header-bottom {
-    margin-top: 100px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -58,7 +62,7 @@ a:hover {
 }
 
 .left-header {
-    width: 500px;
+    width: fit-content;
 }
 
 h1 {
